--- a/references.bib
+++ b/references.bib
@@ -3081,3 +3081,19 @@
 	note = {[Online; accessed 4. Dec. 2024]},
 	url = {https://github.com/tidyverse/ggplot2}
 }
+
+@article{wu2024,
+  title={Design-Specific Transformations in Visualization},
+  author={Wu, Eugene and Chang, Remco},
+  journal={arXiv preprint arXiv:2407.06404},
+  year={2024}
+}
+
+@misc{holtz2022,
+	author = {Holtz, Yan},
+	title = {Barplot with variable width - ggplot2},
+	year = {2022},
+	month = mar,
+	note = {[Online; accessed 6. Dec. 2024]},
+	url = {https://r-graph-gallery.com/81-barplot-with-variable-width.html}
+}
