--- a/references.bib
+++ b/references.bib
@@ -395,7 +395,7 @@
 @inbook{theus2008,
   title={High-dimensional Data Visualization},
   booktitle={Handbook of data visualization},
-  author={Wilhelm, Adalbert},
+  author={Theus, Martin},
   year={2008},
   pages={152-175},
   publisher={Springer Science \& Business Media}
@@ -410,7 +410,7 @@
   publisher={Springer Science \& Business Media}
 }
 
-@inbook{wills,
+@inbook{wills2008,
   title={Linked Data Views},
   booktitle={Handbook of data visualization},
   author={Wills, Graham},
@@ -3096,4 +3096,31 @@
 	month = mar,
 	note = {[Online; accessed 6. Dec. 2024]},
 	url = {https://r-graph-gallery.com/81-barplot-with-variable-width.html}
+}
+
+@misc{mathematicalmathematics2024,
+	title = {Rustic OC instead of being pr[o]du[c]tive},
+	author = {Alejandro Martínez},
+	year = {2024},
+	month = mar,
+	note = {[Online; accessed 8. Dec. 2024]},
+	url = {https://www.facebook.com/photo/?fbid=8191809750834143&set=g.1567682496877142}
+}
+
+@mastersthesis{dao2020,
+  type = {Bachelor's Thesis},
+  title={The Nature And Evolution Of JavaScript},
+  author={Dao, Chau},
+  year={2020},
+  school = {Oulu University of Applied Sciences}
+}
+
+@misc{clark2017,
+  author = {Clark, Lin},
+	title = {A crash course in just-in-time (JIT) compilers},
+	journal = {Mozilla Hacks {\textendash} the Web developer blog},
+	year = {2017},
+	month = feb,
+	note = {[Online; accessed 9. Dec. 2024]},
+	url = {https://hacks.mozilla.org/2017/02/a-crash-course-in-just-in-time-jit-compilers}
 }
