--- a/litreview.Rmd
+++ b/litreview.Rmd
@@ -4,7 +4,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-# Introduction
+# Literature review
 
 ## Brief history of interactive data visualization
 
@@ -91,6 +91,8 @@ Some researchers adopt a broad definition of interactive data visualization, con
 
 However, many other researchers ascribe to a much narrower view of interactive data visualizations, which hinges on high-level analytic features that allow efficient exploration of the data. These features include the ability to generate different views of the data (by e.g. zooming, panning, sorting, and filtering), and the reactive propagation of changes between connected or "linked" parts of a figure [@kehrer2012; @buja1996; @keim2002; @unwin1999; @chen2008]. An often cited guideline is the visual information seeking mantra: overview first, zoom and filter, then details-on-demand [@shneiderman2003]. Similarly, in visual analytics research, a distinction is made between "surface-level" (or "low-level") and "parametric" (or "high-level") interactions, where surface-level interactions manipulate attributes of the visual domain only (e.g. zooming and panning), whereas parametric interactions manipulate attributes of mathematical models or algorithms underlying the visualization [@leman2013; @pike2009]. 
 
+Table \@ref(tab:definitions) provides a concise summary of the several perspectives on interactivity discussed above. It meant to serve as a reference point for future discussions within the text, though it is important to note that this is not an exhaustive list. For a more comprehensive taxonomy of interactive visualization systems and features, see e.g. @dimara2019, @yi2007.
+
 ```{r definitions}
 #| echo: false
 
@@ -127,8 +129,6 @@ knitr::kable(tab, caption = "Summary of the perspectives on interactivity") |> k
 #   border_inner_h(border = fp_border_default(color = "grey80"))
 
 ```
-
-Table \@ref(tab:definitions) provides a concise summary of the several perspectives on interactivity discussed above. It meant to serve as a reference point for future discussions within the text, though it is important to note that this is not an exhaustive list. For a more comprehensive taxonomy of interactive visualization systems and features, see e.g. @dimara2019, @yi2007.
 
 ### Complexity of interactive features
 
@@ -168,7 +168,7 @@ This section describes several common types of interactive features that tend to
 
 Zooming and panning are two fundamental interactive features, often used in tandem. Because of their association, and the fact that they both involve interactive manipulation of scale limits, I discuss them here simultaneously, in a single subsection.
 
-Zooming, depicted in Figure \@ref(fig:zooming), allows the user to magnify a specific region of a single plot. Typically, this is done creating a rectangular selection and the plot scales are then automatically adjusted to match this region. Zooming allows the user to get a better sense of the trend within the magnified region, and discover patterns that may be otherwise obscured due to overplotting or improper aspect ratio [see e.g. @buja1996; @unwin1999; @theus2008]. 
+Zooming, depicted in Figure \@ref(fig:zooming), allows the user to magnify a specific region of a single plot. Typically, this is done creating a rectangular selection and the plot scales are then automatically adjusted to match this region. Zooming allows the user to get a better sense of the trend within the magnified region, and discover patterns that may be otherwise obscured due to overplotting or improper aspect ratio [see e.g. @buja1996; @dix1998; @unwin1999; @theus2008; @yi2003]. 
 
 ```{r zooming}
 #| echo: false
@@ -176,22 +176,53 @@ Zooming, depicted in Figure \@ref(fig:zooming), allows the user to magnify a spe
 knitr::include_graphics("./figures/zooming.png")
 ```
 
-However, after zooming into a region, it is often helpful retain the ability to traverse the wider plot area, while maintaining the same level of zoom and aspect ratio. This is what panning is for. By performing an action like right-clicking and dragging, the user can shift the focus of the zoomed in region around the plot. 
+However, after zooming into a region, it is often helpful retain the ability to traverse the wider plot area, while maintaining the same level of zoom and aspect ratio. This is what panning is for. By performing an action like right-clicking and dragging, the user can shift the center of the zoomed in region around the plot. 
 
 ```{r panning}
 #| echo: false
-#| fig-cap: "Panning involves moving the axis limits while retaining the same zoom level and axis ratio. In the figure above, we pan by moving the coordinates to the bottom right (increasing the weight limits and decreasing the mileage limits, respectively) to move to a different region of the plot."
+#| fig-cap: "Panning involves moving the axis limits while retaining the same zoom level and axis ratio. After zooming into a rectangular region (top row), the user can around the plot region, usually by clicking and dragging (bottom row)."
 knitr::include_graphics("./figures/panning.png")
 ```
 
-Since these features can be implemented with scales only, implementing zooming and panning might seem relatively straightforward, however, even here, there are few interesting problems to consider. First, whereas continuous axes can be zoomed and/or panned by modifying the axis limits directly, discrete axes require a bit more thought. Second, with nested zooming, maintaining a reversible history of previous states is essential [@unwin1999]. Third, at times, it can be useful to link scale updates across multiple plots, such that, for example, zooming or panning a plot in a scatterplot matrix produces the same updates in other plots with the same variables on one of the axes. Finally, an advanced feature that can be also quite useful when combined with hierarchical data such as geographic information is logical or semantic zooming [@keim2002; @unwin1999; @yi2007]. In logical zooming, magnification does not only increase the size of the zoomed-in objects, but also the level of detail. Clearly, this makes it a more complex feature than general zooming involving scales.
+Since these features can be implemented with scales only, implementing zooming and panning might seem relatively straightforward, however, even here, there are few issues to consider. First, whereas continuous axes can be be zoomed and/or panned by simply modifying the axis limits, other types of scales such as discrete axes require a bit more thought. Second, with nested zooming, maintaining a reversible history of previous states is essential [@unwin1999]. Third, at times, it can be useful to link scale updates across multiple plots, such that, for example, zooming or panning a plot in a scatterplot matrix produces the same updates in other plots with the same variables on one of the axes. Finally, an advanced feature that can be also quite useful when combined with hierarchical data such as geographic information is logical or semantic zooming [@keim2002; @unwin1999; @yi2007]. In logical zooming, magnification does not only increase the size of the zoomed-in objects, but also the level of detail. Clearly, this makes it a more complex feature than general zooming involving scales.
 
 #### Querying
 
-Querying is another popular interactive feature that is usually fairly simple to implement. As shown in Figure [REFERENCE], the way querying is typically implemented is that when a user mouses over a particular geometric object, a tooltip or a small table is displayed, showing values corresponding to the underlying data point(s) [@urbanek2003]. This makes it possible to look up precise values that would otherwise be available only approximately via the visual representation. 
+Querying is another popular interactive feature that is usually fairly simple to implement. As shown in Figure \@ref(fig:querying), the way querying is typically implemented is that when a user mouses over a particular geometric object, a tooltip or a small table is displayed, showing values corresponding to the underlying data point(s) [@urbanek2003]. This makes it possible to look up precise values that would otherwise be available only approximately via the visual representation. 
 
-Querying is useful because it allows us to combine the best features of graphics and tables. Specifically, it allows us to move past Tukey's dichotomy: "graphics are for the qualitative/descriptive [...] never for the carefully quantitative (tables do that better)" and "graphics are for comparison [...] not for access to individual amounts" [@tukey1993]. Additionally, querying can also allow us to display more information than would be otherwise available through visual encodings alone, particularly when values corresponding to individual data points are of interest (such as when identifying outliers). 
+```{r querying}
+#| echo: false
+#| fig-cap: "Querying involves hovering over an object to display its associated data values in a table or pop-up. Notice that this can include both plotted values (weight, mileage) as well as values that are not directly represented in the plot (car name, cylinders)."
+knitr::include_graphics("./figures/querying.png")
+```
 
+Querying is useful because it allows us to combine the best features of graphics and tables. Specifically, it allows us overcome the dichotomy pointed out by John Tukey in his famous paper on the role of graphics in data exploration: "graphics are for the qualitative/descriptive [...] never for the carefully quantitative (tables do that better)" and "graphics are for comparison [...] not for access to individual amounts" [@tukey1993]. By providing the option to query geometric objects, it allows the user to seamlessly transition between the high-level analytic overview that the graphic provides and the low-level quantitative information of the table.
+
+Additionally, querying also allow us to show more information than can be displayed via the visual encodings alone (see again Figure \@ref(fig:querying)). Specifically, whereas most plots can encode only two or three variables, we can assign an arbitrary number of key-value pairs to the rows query table. However, it is crucial to balance the need for detail against the risk of visual clutter. Too many rows may overtax the attention of the visualization consumer and also lead to clipping/overplotting issues if the table cannot fit the plotting area. Further, there are [better methods](#bidirectional-communication) for retrieving very detailed information from interactive visualizations.    
+
+While querying one-to-one representations of the data such as points in a scatterplot is relatively simple, querying aggregate objects such as bars in a barplot/histograms presents some challenges. In the case of one-to-one representations, we can always simply retrieve the corresponding row of the data, however, in the case of aggregate objects, a single object may correspond to multiple rows and there may be no obvious way to summarize them. For instance, when querying a continuous variable corresponding to a bar in a barplot, should we return its sum, its maximum, the set of all unique values, or perhaps something entirely different? Likewise, querying objects in the presence of selection or higlighting presents some problems.
+
+#### Representation switching
+
+Most data can be represented by many different sets visual encodings [@wilkinson2012]. However, depending on our visualization goals, some sets of encodings can serve better to answer certain questions than others. By giving the user the ability to interactively switch between these representations, we empower them to explore the data more deeply and answer a wider range of questions [@yi2007].
+
+#### Linked selection
+
+Linked selection, also known as linked brushing, highlighting, or views, is often considered as one of the most useful interactive data visualization features [see e.g. @buja1996; @wilhelm2003; @heer2012; @ward2015; @ware2019]. Fundamentally, it involves creating a figure with multiple "linked" plots. The user can then click or click-and-drag over objects in one plot, and the corresponding cases are highlighted across all the other plots, see Figure \@ref(fig:linked-selection). This makes it possible to quickly quickly explore trends across different dynamically-generated subsets of the data [@dix1998]. The ability to quickly materialize alternative views of the data makes this a particularly effective tool for data exploration [@wilhelm2008; @wills2008].
+
+```{r linked-selection}
+#| echo: false
+#| fig-cap: "Linked selection involves highlighting the same cases across all plots. The user can select some objects in one plot, such as points in a scatterplot (top left), and the corresponding cases are higlighted in all the other plots."
+knitr::include_graphics("./figures/linked-selection.png")
+```
+
+Despite the fact that the user experience of linked selection is usually fairly intuitive, there are many subtle considerations that go into implementing the feature [for a good overview, see @wilhelm2008]. First, there is the issue of how the user makes the selection. Typically, clicking selects a single objects and clicking-and-dragging selects multiple objects in a rectangular region (similar to how selecting files and folders works on desktop GUIs of most operating systems). In some systems, the users may also drag the selection region around ("brushing"), form a continuous "lasso" selection, or select points based on distance from a centroid [@wills2008]. Further, when one variables is continuous and the other is derived (such as the x- and y-axes in a histogram), the interaction may also be simplified by restricting selection/brushing to the primary axis [@satyanarayan2016]. Finally, the selections can be combined by various operators such as OR, AND, NOT, and XOR, to form unions, intersections, and other types of logical subsets [@theus2002; @urbanek2003; @wills2008]. 
+
+Second, there is the issue of who should dispatch and respond to selection events. In presentation-focused interactive data visualization and dashboarding systems, this responsibility is kept flexible, such that some plots may only dispatch, only respond, do both, or neither [@satyanarayan2015; @satyanarayan2016]. However, in systems focused on data exploration, the convention is typically for all plots to both dispatch and respond to selection events, such that they may be interacted with in the same way. [@theus2002; @urbanek2003; @urbanek2011].
+
+Third, there is the issue of what to link. In the case of data represented by a two-dimensional table or data frame, the most common method is to link cases taken on the same observational level (identity linking), such that each row gets assigned a value representing the selection status [@urbanek2003; @wilhelm2008; @wills2008]. However, in the case of more complex data, more advanced linking schemes are also available, such as hierarchical and distance-based linking [@wilhelm2008; @urbanek2011]. 
+
+Third, there is the issue of how to display the selection. 
 
 ## The highlighting problem
 
@@ -239,7 +270,6 @@ Thus, the choice is between stacking and dodging. While, as was discussed above,
 
 First, I propose that stacking is the superior method for *displaying* selection. Thanks to the four Gestalt principles of proximity, similarity, closure, and common region, in a stacked barplot, each bar presents itself as a single visual entity. In other words, since the stacked segments are placed right on top of each other, and share width and a closed border, they are perceived as part of a unified whole (the bar). This remains true throughout selection - no matter how the heights of the highlighted segments change, the height of the whole stacked bar remains constant, and so does the overall outline of the plot.
 
-To address the highlighting problem, we need to first discuss some key mathematical concepts.
 
 ## Theory of data visualization systems
 
